fixed readme content

--- a/readme.textile
+++ b/readme.textile
@@ -8,7 +8,7 @@ h2. Sidney Crosby Art Ross Watch
 
 Even after missing the remainder of last season and the first 20 games of this season, can Sidney Crosby capture the Art Ross Trophy again?
 
-Follow « Sid the Kid » for the rest of this history making season!
+Follow &laquo; Sid the Kid &raquo; for the rest of this history making season!
 
 "http://hockey.nesbot.com/crosbywatch":http://hockey.nesbot.com/crosbywatch
 
